--- a/frontend/kiki/index.html
+++ b/frontend/kiki/index.html
@@ -15,16 +15,13 @@
   <body>
     <div class="main-container">
       <!-- 과거 이력 확인 및 용어 정리 -->
-      <div class="sidebar">
-        <button id="btnmain" class="main-btn">메인</button>
-        <button id="btnword" class="word-btn">용어</button>
-      </div>
-
+      <button id="btnmain" class="main-btn">💭</button>
+      <button id="btnword" class="word-btn">📖</button>
       <button id="btnlist" class="list-btn">📌</button>
       <!-- 챗봇 영역 -->
       <div id="chatContainer" class="chat-container">
         <!-- 로고 -->
-        <div class="logo">LawBot</div>
+        <div class="logo"></div>
         <div id="chatbox" class="chat-box"></div>
         <!-- 입력 컨테이너 -->
         <div class="input-container">
@@ -73,6 +70,25 @@
         </div>
       </div>
 
+      <!-- 용어 화면 영역 (wordScreen 추가) -->
+      <div id="wordScreen" class="chat-container" style="display: none">
+        <div class="logo"></div>
+        <div class="chat-box" id="chatContainer"></div>
+        <div class="word-input-container">
+          <div id="lang">
+            <button id="lang-btn" class="lang">🌐</button>
+          </div>
+          <input
+            type="text"
+            class="input-box"
+            id="userInputword"
+            placeholder="질문을 입력해주세요 !"
+            onkeyup="checkEnter(event)"
+          />
+          <button id="voiceButtonword" class="voice">🎤</button>
+        </div>
+        <button id="sendButtonword" class="send-btn-word">전송</button>
+      </div>
       <!-- 언어 선택 모달 -->
       <div id="languageModal" class="modal">
         <div class="modal-content">
@@ -80,30 +96,38 @@
             <li data-lang="ko">한국어</li>
             <li data-lang="en">English</li>
             <!-- 영어-->
-            <li data-lang="hi">हिन्दी</li>
-            <!-- 힌디어-->
-            <li data-lang="vi">Tiếng Việt</li>
-            <!-- 베트남어-->
-            <li data-lang="ru">Русский</li>
-            <!-- 러시아어-->
+            <li data-lang="ja">日本語</li>
+            <!-- 일본어 -->
             <li data-lang="zh">中文</li>
             <!-- 중국어-->
             <li data-lang="th">ไทย</li>
             <!-- 태국어 -->
-            <li data-lang="uz">O‘zbekcha</li>
-            <!-- 우즈벡어 -->
-            <li data-lang="ja">日本語</li>
-            <!-- 일본어 -->
+            <li data-lang="vi">Tiếng Việt</li>
+            <!-- 베트남어-->
             <li data-lang="tl">Filipino</li>
             <!-- 필리핀어 -->
+            <li data-lang="uz">O‘zbekcha</li>
+            <!-- 우즈벡어 -->
+            <li data-lang="ru">Русский</li>
+            <!-- 러시아어-->
+            <li data-lang="hi">हिन्दी</li>
+            <!-- 힌디어-->
           </ul>
           <button id="closeModal">닫기</button>
         </div>
       </div>
 
+      <!--압정 모달-->
+      <div id="historyModal" class="modal">
+        <div class="modal-contents">
+          <ul id="historylist"></ul>
+          <button id="closeHistoryModal">닫기</button>
+        </div>
+      </div>
+
       <!-- 질문 답변 저장 -->
       <div class="choice-container">
-        <button class="log-btn">+</button>
+        <button class="log-btn">✏️</button>
       </div>
     </div>
   </body>
