로그인 추가

--- a/frontend/kiki/word.html
+++ b/frontend/kiki/word.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="main-container">
+      <button id="loginButton" class="login-btn">🔑</button>
       <!-- 과거 이력 확인 및 용어 정리 -->
       <button id="btnmain" class="main-btn">💭</button>
       <button id="btnword" class="word-btn">📖</button>
