--- a/frontend/kiki/word.html
+++ b/frontend/kiki/word.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>LawBot</title>
     <link rel="stylesheet" href="word_style.css" />
     <script src="word_script.js" defer></script>
 
